[package]
name = "yaml-parser"
version = "0.1.0"
categories = ["encoding", "parser-implementations", "no-std"]
keywords = ["yaml"]
edition = "2021"

[features]
default = ["std"]
std = []

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
serde = { version = "1.0.196", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]